refactor: upgrade to Java 17 and ANTLR 4.13.2, update dependencies, and modernize Integer instantiation